things dont break

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "mp2_starter",
-  "version": "2.0",
-  "homepage": "https://github.com/uiuc-web-programming/mp2_starter",
+  "name": "mp3",
+  "version": "1.0",
+  "homepage": "https://github.com/uiuc-web-programming/mp3",
   "authors": [
-    "biplabdeka <biplab.deka@gmail.com>"
+    "biplabdeka <biplab.deka@gmail.com>",
+    "sskhandek <sskhandek@gmail.com>"
   ],
   "ignore": [
     "**/.*",
