--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "mp2_starter",
-  "version": "1.0.0",
-  "homepage": "https://github.com/uiuc-web-programming/mp1_starter",
+  "name": "mp3_starter",
+  "version": "2.0.0",
+  "homepage": "https://github.com/uiuc-web-programming/mp3_starter",
   "authors": [
-    "biplabdeka <biplab.deka@gmail.com>"
+    "biplabdeka <biplab.deka@gmail.com>",
+    "sskhandek <sskhandek@gmail.com>"
   ],
   "dependencies": {
     "express": "^4.11.1",
